tests/compile-fail/custom_crate_incorrect_path.rs
#[derive(darling::FromDeriveInput)]
#[darling(crate = not_darling)]
pub struct Example {
    ident: Option<syn::Ident>,
}

fn main() {}
